# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .commit-me.json  .copier-answers.mr-minimal.yaml  .copier-answers.yaml  .copier-answers.yml  .cspell.json  .devskim.json  .gitignore  .jscpd.json  .mega-linter.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .treefmt.toml  .v8rignore  AGENTS.md  LICENSE  Packages.md  README.md  cog.toml  cspell.json  dot_bash_aliases  dot_bash_aliases.tmpl  dot_bashrc  dot_zshenv  package.json  pyproject.toml  run_once_before_linux-install-packages.sh  run_once_dot_gitconfig  run_once_gitconfiger.sh.tmpl
.chezmoidata/: distros.yaml  packages.yaml
.chezmoiscripts/: .install-password-manager.ps1  .install-password-manager.sh  run_once_after-01-linux-install-package.sh  run_once_before-00-linux-install-packages.sh  run_once_before_linux-install-packages.sh  run_onchange_linux-install-packages.sh.tmpl  run_onchange_windows-install-packages.cmd.tmpl
.chezmoitemplates/: configure_git.tmpl  installer.tmpl  powershell_profile.ps1.tmpl
.zed/: gen-packages-table.py  packages-names.yaml  repology-filter.py  repology-filter.sh  settings.json  sort-yaml-packages.sh  tasks.json
dot_bashrc.d/: 00-export-paths.sh.tmpl  13-cargo.sh.tmpl  private_00-export-paths.sh.tmpl  private_00-oh-my-posh.sh  private_00-oh-my-posh.sh.tmpl  private_01-chezmoi.sh  private_01-chezmoi.sh.tmpl  private_02-mcfly.sh  private_02-mcfly.sh.tmpl  private_10-fnm.sh  private_10-fnm.sh.tmpl  private_11-uv.sh  private_11-uv.sh.tmpl  private_12-direnv.sh  (+3 more)
(+230 files in other folders)
